[project]
name = "iphone-Phone.app-exporter"
version = "1.0"
description = "Export voicemails and call history from iPhone backups (ie Phone.app data) to labeled audio files and CSV manifests."
authors = [
    { name = "alexozwald" },
    { name = "sawwavecircuits" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "iphone-backup-decrypt>=0.9.0",
    "pycryptodome>=3.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9",
]

[project.scripts]
export-phoneapp = "main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py", "src/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
